--- a/tutorials.html
+++ b/tutorials.html
@@ -158,14 +158,7 @@
           <div class="container py-12">
             <div class="row align-items-center text-center">
               <div class="col-12">
-                <h1 class="sub-title mb-2" data-aos="fade-down" data-aos-delay="100">How It Works</h1>
-                <a href="tutorials.html" class="btn btn-primary rounded-pill btn-send mb-3 d-inline-flex align-items-center gap-2">
-                  <svg width="20" height="20" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="20" cy="20" r="20" fill="#fff"/>
-                    <polygon points="16,12 28,20 16,28" fill="#30B0FF"/>
-                  </svg>
-                  Watch Tutorials
-                </a>
+                <h1 class="sub-title mb-2" data-aos="fade-down" data-aos-delay="100">Tutorials</h1>
               </div>
               <!-- /column -->
             </div>
@@ -175,106 +168,133 @@
         </section>
       </div>
 
-      <section class="wrapper">
-        <div class="container py-8 py-lg-12">
-          <div class="row">
-            <div class="col-lg-7 text-center text-md-start">
-              <h2 class="sub-title lh-xs mb-5" data-aos="fade-down" data-aos-delay="100">Your Path to Freelance Success</h2>
-              <p class="d-block d-md-none" data-aos="fade-down" data-aos-delay="200">Bizzmakr empowers freelancers to earn in BDT while helping businesses hire skilled talent affordably. Our trusted freelance platform drives growth, innovation, and economic impact across Bangladesh.</p>
-              <div data-aos="fade-down" data-aos-delay="100">
-                <div class="d-flex flex-column flex-md-row gap-4 gap-md-8 align-items-center lift bg-ash-smoke rounded-4 p-4 mb-5">
-                  <svg width="64" height="59" viewBox="0 0 64 59" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M63.5 58.5H45.5V0H63.5V58.5ZM41 58.5H23V18H41V58.5ZM18.5 58.5H0.5V31.5H18.5V58.5Z" fill="#30B0FF" />
-                  </svg>
-                  <div>
-                    <p class="fw-600 mb-0 fs-18">Craft an Impressive Profile</p>
-                    <p class="fw-light mb-0">Highlight your skills, set your rates, and stand out to potential clients.</p>
+      <section class="wrapper my-5">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <div class="position-relative">
+                    <img src="https://img.youtube.com/vi/GPzBeGDaNII/hqdefault.jpg" class="card-img-top" alt="Tutorial thumbnail">
+                    <button type="button" class="btn btn-light position-absolute top-50 start-50 translate-middle rounded-circle shadow" style="width:60px;height:60px;padding:0;border:none;" data-bs-toggle="modal" data-bs-target="#videoModal">
+                      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" fill="#fff"/>
+                        <polygon points="16,12 28,20 16,28" fill="#30B0FF"/>
+                      </svg>
+                    </button>
+                  </div>
+                  <!-- Video Modal -->
+                  <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content bg-transparent border-0">
+                        <div class="modal-body p-0 position-relative">
+                          <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                          <div class="ratio ratio-16x9">
+                            <iframe id="modalVideo" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <script>
+                    // Play video in modal and stop on close
+                    var videoModal = document.getElementById('videoModal');
+                    var modalVideo = document.getElementById('modalVideo');
+                    var videoSrc = 'https://www.youtube.com/embed/GPzBeGDaNII?si=9Urxcw8PqBeIObtH&autoplay=1';
+                    videoModal.addEventListener('show.bs.modal', function () {
+                      modalVideo.src = videoSrc;
+                    });
+                    videoModal.addEventListener('hidden.bs.modal', function () {
+                      modalVideo.src = '';
+                    });
+                  </script>
+                  <div class="card-body">
+                    <h5 class="card-title">How to open a Freelancing account</h5>
+                    <a href="#" class="btn btn-primary">Watch it now</a>
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-down" data-aos-delay="140">
-                <div class="d-flex flex-column flex-md-row gap-4 gap-md-8 align-items-center lift bg-ash-smoke rounded-4 p-4 mb-5">
-                  <svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M56.4531 0.203125H2.54688C1.25049 0.203125 0.203125 1.25049 0.203125 2.54688V56.4531C0.203125 57.7495 1.25049 58.7969 2.54688 58.7969H56.4531C57.7495 58.7969 58.7969 57.7495 58.7969 56.4531V2.54688C58.7969 1.25049 57.7495 0.203125 56.4531 0.203125ZM18.9531 46.4922C18.9531 46.8145 18.6895 47.0781 18.3672 47.0781H12.5078C12.1855 47.0781 11.9219 46.8145 11.9219 46.4922V12.5078C11.9219 12.1855 12.1855 11.9219 12.5078 11.9219H18.3672C18.6895 11.9219 18.9531 12.1855 18.9531 12.5078V46.4922ZM33.0156 25.9844C33.0156 26.3066 32.752 26.5703 32.4297 26.5703H26.5703C26.248 26.5703 25.9844 26.3066 25.9844 25.9844V12.5078C25.9844 12.1855 26.248 11.9219 26.5703 11.9219H32.4297C32.752 11.9219 33.0156 12.1855 33.0156 12.5078V25.9844ZM47.0781 31.2578C47.0781 31.5801 46.8145 31.8438 46.4922 31.8438H40.6328C40.3105 31.8438 40.0469 31.5801 40.0469 31.2578V12.5078C40.0469 12.1855 40.3105 11.9219 40.6328 11.9219H46.4922C46.8145 11.9219 47.0781 12.1855 47.0781 12.5078V31.2578Z"
-                      fill="#30B0FF"
-                    />
-                  </svg>
-                  <div>
-                    <p class="fw-600 mb-0 fs-18">Find the Right Projects</p>
-                    <p class="fw-light mb-0">Browse job postings designed to match your abilities and goals.</p>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-down" data-aos-delay="180">
-                <div class="d-flex flex-column flex-md-row gap-4 gap-md-8 align-items-center lift bg-ash-smoke rounded-4 p-4 mb-5">
-                  <svg width="57" height="63" viewBox="0 0 57 63" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M4.0375 3.9125C0.375 7.57187 0.375 13.4656 0.375 25.25V37.75C0.375 49.5344 0.375 55.4281 4.0375 59.0875C7.7 62.7469 13.5906 62.75 25.375 62.75H31.625C43.4094 62.75 49.3031 62.75 52.9625 59.0875C56.6219 55.425 56.625 49.5344 56.625 37.75V25.25C56.625 13.4656 56.625 7.57187 52.9625 3.9125C49.3 0.253125 43.4094 0.25 31.625 0.25H25.375C13.5906 0.25 7.69687 0.25 4.0375 3.9125ZM16 22.9062C15.3784 22.9062 14.7823 23.1532 14.3427 23.5927C13.9032 24.0323 13.6562 24.6284 13.6562 25.25C13.6562 25.8716 13.9032 26.4677 14.3427 26.9073C14.7823 27.3468 15.3784 27.5938 16 27.5938H41C41.6216 27.5938 42.2177 27.3468 42.6573 26.9073C43.0968 26.4677 43.3438 25.8716 43.3438 25.25C43.3438 24.6284 43.0968 24.0323 42.6573 23.5927C42.2177 23.1532 41.6216 22.9062 41 22.9062H16ZM16 35.4062C15.3784 35.4062 14.7823 35.6532 14.3427 36.0927C13.9032 36.5323 13.6562 37.1284 13.6562 37.75C13.6562 38.3716 13.9032 38.9677 14.3427 39.4073C14.7823 39.8468 15.3784 40.0938 16 40.0938H31.625C32.2466 40.0938 32.8427 39.8468 33.2823 39.4073C33.7218 38.9677 33.9688 38.3716 33.9688 37.75C33.9688 37.1284 33.7218 36.5323 33.2823 36.0927C32.8427 35.6532 32.2466 35.4062 31.625 35.4062H16Z"
-                      fill="#30B0FF"
-                    />
-                  </svg>
-                  <div>
-                    <p class="fw-600 mb-0 fs-18">Submit Winning Proposals</p>
-                    <p class="fw-light mb-0">Customize your pitches to showcase your expertise and secure projects.</p>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
               </div>
-              <p class="fw-bold fs-26 text-primary mb-5 d-none d-md-block" data-aos="fade-down" data-aos-delay="220">Start Your Journey Today</p>
-              <div class="align-items-center gap-3 d-none d-md-flex" data-aos="fade-down" data-aos-delay="240">
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/Google-Play.svg" alt="" />
-                </button>
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/App-Store.png" alt="" />
-                </button>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
             </div>
-            <!-- /column -->
-            <div class="col-lg-5" data-aos="zoom-in">
-              <img class="img-fluid" src="./assets/img/freelance-success.png" alt="" />
-            </div>
-            <!-- /column -->
           </div>
-          <!-- /.row -->
-        </div>
-        <!-- /.container -->
-      </section>
-
-      <section class="wrapper">
-        <div class="container py-8 py-lg-12">
-          <div class="row justify-content-center text-center">
-            <div class="col-xl-9 col-lg-10">
-              <h2 class="sub-title lh-xs mb-5" data-aos="fade-down" data-aos-delay="100">
-                Show your skill, and <br class="d-none d-lg-block" />
-                unlock <span class="text-primary">the opportunity</span>
-              </h2>
-              <p class="fs-18 bg-primary rounded-pill text-white fw-600 lh-xs px-3 py-1" data-aos="fade-down" data-aos-delay="180">Get hired effortlessly in just minutes.</p>
-            </div>
-            <div class="col-12">
-              <div class="rounded-4" data-aos="zoom-in">
-                <div class="player" data-plyr-provider="youtube" data-plyr-embed-id="GPzBeGDaNII"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="wrapper">
-        <div class="container pb-8 pb-lg-12">
-          <div class="row justify-content-center text-center">
-            <div class="col-lg-10">
-              <h2 class="sub-title lh-xs mb-5" data-aos="fade-down" data-aos-delay="100">Connect with verified, <span class="text-primary">top-tier freelancers.</span></h2>
-              <p class="fs-18 bg-primary rounded-pill text-white fw-600 lh-xs px-3 py-1" data-aos="fade-down" data-aos-delay="180">Manage projects from start to finish within our platform.</p>
-            </div>
-            <div class="col-12">
-              <div class="rounded-4" data-aos="zoom-in">
-                <div class="player" data-plyr-provider="youtube" data-plyr-embed-id="rmC_hPWq0mc"></div>
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
 
       <footer class="footer-bg">
