--- a/tutorials.html
+++ b/tutorials.html
@@ -209,90 +209,94 @@
                   </script>
                   <div class="card-body">
                     <h5 class="card-title">How to open a Freelancing account</h5>
+                    <a href="https://www.youtube.com/embed/GPzBeGDaNII?si=9Urxcw8PqBeIObtH&autoplay=1" target="_blank" class="btn btn-primary">Watch it now</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-4">
+                <div class="card" style="width: 18rem;">
+                  <div class="position-relative">
+                    <img src="https://img.youtube.com/vi/GPzBeGDaNII/hqdefault.jpg" class="card-img-top" alt="Tutorial thumbnail">
+                    <button type="button" class="btn btn-light position-absolute top-50 start-50 translate-middle rounded-circle shadow" style="width:60px;height:60px;padding:0;border:none;" data-bs-toggle="modal" data-bs-target="#videoModal">
+                      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" fill="#fff"/>
+                        <polygon points="16,12 28,20 16,28" fill="#30B0FF"/>
+                      </svg>
+                    </button>
+                  </div>
+                  <!-- Video Modal -->
+                  <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content bg-transparent border-0">
+                        <div class="modal-body p-0 position-relative">
+                          <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                          <div class="ratio ratio-16x9">
+                            <iframe id="modalVideo" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <script>
+                    // Play video in modal and stop on close
+                    var videoModal = document.getElementById('videoModal');
+                    var modalVideo = document.getElementById('modalVideo');
+                    var videoSrc = 'https://www.youtube.com/embed/GPzBeGDaNII?si=9Urxcw8PqBeIObtH&autoplay=1';
+                    videoModal.addEventListener('show.bs.modal', function () {
+                      modalVideo.src = videoSrc;
+                    });
+                    videoModal.addEventListener('hidden.bs.modal', function () {
+                      modalVideo.src = '';
+                    });
+                  </script>
+                  <div class="card-body">
+                    <h5 class="card-title">How to open a Freelancing account</h5>
                     <a href="#" class="btn btn-primary">Watch it now</a>
                   </div>
                 </div>
               </div>
               <div class="col my-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+                  <div class="position-relative">
+                    <img src="https://img.youtube.com/vi/GPzBeGDaNII/hqdefault.jpg" class="card-img-top" alt="Tutorial thumbnail">
+                    <button type="button" class="btn btn-light position-absolute top-50 start-50 translate-middle rounded-circle shadow" style="width:60px;height:60px;padding:0;border:none;" data-bs-toggle="modal" data-bs-target="#videoModal">
+                      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" fill="#fff"/>
+                        <polygon points="16,12 28,20 16,28" fill="#30B0FF"/>
+                      </svg>
+                    </button>
+                  </div>
+                  <!-- Video Modal -->
+                  <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content bg-transparent border-0">
+                        <div class="modal-body p-0 position-relative">
+                          <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                          <div class="ratio ratio-16x9">
+                            <iframe id="modalVideo" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <script>
+                    // Play video in modal and stop on close
+                    var videoModal = document.getElementById('videoModal');
+                    var modalVideo = document.getElementById('modalVideo');
+                    var videoSrc = 'https://www.youtube.com/embed/GPzBeGDaNII?si=9Urxcw8PqBeIObtH&autoplay=1';
+                    videoModal.addEventListener('show.bs.modal', function () {
+                      modalVideo.src = videoSrc;
+                    });
+                    videoModal.addEventListener('hidden.bs.modal', function () {
+                      modalVideo.src = '';
+                    });
+                  </script>
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">How to open a Freelancing account</h5>
+                    <a href="#" class="btn btn-primary">Watch it now</a>
                   </div>
                 </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col my-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
+              </div>    
             </div>
           </div>
       </section>
