Fix pricing contents

--- a/pricing.html
+++ b/pricing.html
@@ -356,13 +356,13 @@
                         <h5 class="card-title">Premium Plan Most Popular</h5>
                         <h1>BDT 499<p>/month<br>billed monthly</p></h1>
                         <ul class="feature-list">
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited job swipes</li>
-                          <li><i class="fas fa-check feature-icon"></i>See who swiped on you instantly</li>
-                          <li><i class="fas fa-check feature-icon"></i>Advanced filters (skill, rate, location)</li>
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited backtrack & saved jobs</li>
+                          <li><i class="fas fa-check feature-icon"></i>Unlimited freelancer swipes</li>
+                          <li><i class="fas fa-check feature-icon"></i>See which freelancer swiped on your job immediately</li>
+                          <li><i class="fas fa-check feature-icon"></i>Advanced filters (expertise, budget, location)</li>
+                          <li><i class="fas fa-check feature-icon"></i>Unlimited backtrack & saved profiles</li>
                           <li><i class="fas fa-check feature-icon"></i>Direct messaging</li>
                           <li><i class="fas fa-check feature-icon"></i>120 minutes of in-app calling</li>
-                          <li><i class="fas fa-check feature-icon"></i>Profile verification badge</li>
+                          <li><i class="fas fa-check feature-icon"></i>Verification badge for credibility</li>
                           <li><i class="fas fa-check feature-icon"></i>Instant withdrawals</li>
                           <li><i class="fas fa-check feature-icon"></i>Priority customer support (direct calls)</li>
                         </ul>
