--- a/pricing.html
+++ b/pricing.html
@@ -152,41 +152,38 @@
           <!-- /.container -->
         </nav>
         <!-- /.navbar -->
-
-        <section class="wrapper bg-gradient-2">
-          <div class="container pt-10 pb-0">
-            <div class="row align-items-center g-5 text-center text-md-start">
-              <div class="col-lg-6">
-                <h2 class="lh-xs ls-sm mb-3 sub-title" data-aos="fade-down" data-aos-delay="100">Fair,Transparent & Cost Effective!</h2>
-                <p class="mb-2 mb-md-10" data-aos="fade-down" data-aos-delay="120">Pay only 3% service charge on payments made to freelancers</p>
-              </div>
-              <!-- /column -->
-              <div class="col-lg-6 position-relative" data-aos="zoom-in">
-                <img class="img-fluid" src="./assets/img/pricing-1.png" alt="" />
-                <div class="person-details left-0">
-                  <div class="bg-primary rounded-pill px-3 py-1 mb-2 text-white">
-                    <p class="mb-0 fs-12">Looking for Digital Marketer</p>
-                  </div>
-                  <p class="fs-20 fw-bold mb-0">Dilara Jahan</p>
-                  <p class="fs-12 fw-light mb-2">CEO at Upen Com Limited</p>
-                  <div class="d-flex justify-content-center justify-content-md-start gap-2">
-                    <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M5.75 9C5.75 7.20507 7.20507 5.75 9 5.75C10.7949 5.75 12.25 7.20507 12.25 9C12.25 10.7949 10.7949 12.25 9 12.25C7.20507 12.25 5.75 10.7949 5.75 9Z" fill="#575756" />
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M0.773543 7.87739C1.11718 3.70845 4.60097 0.5 8.78406 0.5H9.21599C13.3991 0.5 16.8829 3.70845 17.2265 7.87739C17.4115 10.122 16.7182 12.3508 15.2925 14.0943L10.4995 19.9561C9.72449 20.9039 8.27556 20.9039 7.50059 19.9561L2.70752 14.0943C1.28187 12.3508 0.588525 10.122 0.773543 7.87739ZM9 4.25C6.37665 4.25 4.25 6.37665 4.25 9C4.25 11.6234 6.37665 13.75 9 13.75C11.6234 13.75 13.75 11.6234 13.75 9C13.75 6.37665 11.6234 4.25 9 4.25Z" fill="#575756" />
-                    </svg>
-                    <p class="fs-12 fw-light mb-0">Dhaka,Bangladesh</p>
-                  </div>
-                </div>
-              </div>
-              <!-- /column -->
-            </div>
-            <!-- /.row -->
-          </div>
-          <!-- /.container -->
-        </section>
       </div>
 
-      <section class="wrapper bg-gradient-3">
+      <section class="wrapper bg-gradient-4">
+        <div class="container pt-10 pb-0">
+          <div class="row align-items-center g-5 text-center text-md-start">
+            <div class="col-lg-6">
+              <h2 class="lh-xs ls-sm mb-3 sub-title" data-aos="fade-down" data-aos-delay="100">Fair,Transparent & Cost Effective!</h2>
+              <p class="mb-2 mb-md-10" data-aos="fade-down" data-aos-delay="120">Pay only 3% service charge on payments made to freelancers</p>
+            </div>
+            <!-- /column -->
+            <div class="col-lg-6 position-relative" data-aos="zoom-in">
+              <img class="img-fluid" src="./assets/img/pricing-1.png" alt="" />
+              <div class="person-details left-0">
+                <div class="bg-primary rounded-pill px-3 py-1 mb-2 text-white">
+                  <p class="mb-0 fs-12">Looking for Digital Marketer</p>
+                </div>
+                <p class="fs-20 fw-bold mb-0">Dilara Jahan</p>
+                <p class="fs-12 fw-light mb-2">CEO at Upen Com Limited</p>
+                <div class="d-flex justify-content-center justify-content-md-start gap-2">
+                  <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.75 9C5.75 7.20507 7.20507 5.75 9 5.75C10.7949 5.75 12.25 7.20507 12.25 9C12.25 10.7949 10.7949 12.25 9 12.25C7.20507 12.25 5.75 10.7949 5.75 9Z" fill="#575756" />
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.773543 7.87739C1.11718 3.70845 4.60097 0.5 8.78406 0.5H9.21599C13.3991 0.5 16.8829 3.70845 17.2265 7.87739C17.4115 10.122 16.7182 12.3508 15.2925 14.0943L10.4995 19.9561C9.72449 20.9039 8.27556 20.9039 7.50059 19.9561L2.70752 14.0943C1.28187 12.3508 0.588525 10.122 0.773543 7.87739ZM9 4.25C6.37665 4.25 4.25 6.37665 4.25 9C4.25 11.6234 6.37665 13.75 9 13.75C11.6234 13.75 13.75 11.6234 13.75 9C13.75 6.37665 11.6234 4.25 9 4.25Z" fill="#575756" />
+                  </svg>
+                  <p class="fs-12 fw-light mb-0">Dhaka,Bangladesh</p>
+                </div>
+              </div>
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
         <div class="container pt-16 pt-md-10 pb-0">
           <div class="align-items-center flex-column-reverse flex-lg-row row text-center text-md-start">
             <div class="col-lg-6 position-relative" data-aos="zoom-in">
@@ -218,7 +215,7 @@
         <!-- /.container -->
       </section>
 
-      <section class="wrapper">
+      <section class="wrapper bg-gradient-4">
         <div class="container pt-16 pt-md-8 py-8">
           <div class="row align-items-center mt-5">
             <div class="col-lg-7">
@@ -258,12 +255,9 @@
           <!-- /.row -->
         </div>
         <!-- /.container -->
-      </section>
-
-      <section class="wrapper bg-gradient-4">
         <div class="container py-8">
           <div class="row mb-4 mb-md-10">
-            <div class="col-lg-10 offset-1 text-center" data-aos="fade-down" data-aos-delay="100">
+            <div class="col-lg-12 text-center" data-aos="fade-down" data-aos-delay="100">
               <h2 class="display-1 mb-3">Affordable & On-time Solutions</h2>
               <p>We believe in making opportunities accessible for everyone in Bangladesh. Bizzmakr keeps things transparent and simple. No hidden fees, and no surprises!</p>
             </div>
@@ -271,13 +265,13 @@
           </div>
           
           <!-- /.row -->
-          <div class="row g-5">
-            <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
+          <div class="row g-5 justify-content-center">
+            <ul class="nav nav-pills mb-3 pricing-nav-btn-grp" id="pills-tab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">For Freelancers</button>
+                <button class="nav-link active rounded-pill pricing-nav text-primary me-2" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">For Freelancers</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">For Clients</button>
+                <button class="nav-link rounded-pill pricing-nav text-primary" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">For Clients</button>
               </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
