Update pricing card

--- a/pricing.html
+++ b/pricing.html
@@ -278,10 +278,11 @@
               <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                 <div class="row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <div class="card">
+                    <div class="card pricing-card-bg rounded-4">
                       <div class="card-body">
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
-                        <h1>BDT 0<p>/month<br>billed monthly</p></h1>
+                        <h1>BDT 0</h1>
+                        <p>/month<br>billed monthly</p>
                         <ul class="feature-list">
                           <li><i class="fas fa-times feature-icon"></i>Limited daily swipes</li>
                           <li><i class="fas fa-times feature-icon"></i>No instant access to see who swiped on you</li>
@@ -294,15 +295,16 @@
                           <li><i class="fas fa-times feature-icon"></i>Standard customer support</li>
                         </ul>
                       
-                        <a href="#" class="btn btn-primary">Choose Plan</a>
+                        <a href="#" class="btn btn-primary w-100">Choose Plan</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-6">
-                    <div class="card">
-                      <div class="card-body">
-                        <h5 class="card-title">Premium Plan Most Popular</h5>
-                        <h1>BDT 499<p>/month<br>billed monthly</p></h1>
+                    <div class="card bg-primary bg-opacity-50 rounded-4">
+                      <div class="card-body text-white">
+                        <h5 class="card-title text-white">Premium Plan Most Popular</h5>
+                        <h1 class="text-white">BDT 499</h1>
+                        <p>/month<br>billed monthly</p>
                         <ul class="feature-list">
                           <li><i class="fas fa-check feature-icon"></i>Unlimited job swipes</li>
                           <li><i class="fas fa-check feature-icon"></i>See who swiped on you instantly</li>
@@ -314,7 +316,7 @@
                           <li><i class="fas fa-check feature-icon"></i>Instant withdrawals</li>
                           <li><i class="fas fa-check feature-icon"></i>Priority customer support (direct calls)</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Choose Plan</a>
+                        <a href="#" class="btn btn-white w-100">Choose Plan</a>
                       </div>
                     </div>
                   </div>
@@ -324,10 +326,11 @@
               <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                 <div class="row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <div class="card">
+                    <div class="card pricing-card-bg rounded-4">
                       <div class="card-body">
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
-                        <h1>BDT 0<p>/month<br>billed monthly</p></h1>
+                        <h1>BDT 0</h1>
+                        <p>/month<br>billed monthly</p>
                         <ul class="feature-list">
                           <li><i class="fas fa-times feature-icon"></i>Limited daily swipes</li>
                           <li><i class="fas fa-times feature-icon"></i>No instant access to see who swiped on you</li>
@@ -340,15 +343,16 @@
                           <li><i class="fas fa-times feature-icon"></i>Standard customer support</li>
                         </ul>
                       
-                        <a href="#" class="btn btn-primary">Choose Plan</a>
+                        <a href="#" class="btn btn-primary w-100">Choose Plan</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-6">
-                    <div class="card">
+                    <div class="card rounded-4 bg-primary text-white">
                       <div class="card-body">
-                        <h5 class="card-title">Premium Plan Most Popular</h5>
-                        <h1>BDT 499<p>/month<br>billed monthly</p></h1>
+                        <h5 class="card-title text-white">Premium Plan Most Popular</h5>
+                        <h1 class="text-white">BDT 499</h1>
+                        <p>/month<br>billed monthly</p>
                         <ul class="feature-list">
                           <li><i class="fas fa-check feature-icon"></i>Unlimited freelancer swipes</li>
                           <li><i class="fas fa-check feature-icon"></i>See which freelancer swiped on your job immediately</li>
@@ -360,7 +364,7 @@
                           <li><i class="fas fa-check feature-icon"></i>Instant withdrawals</li>
                           <li><i class="fas fa-check feature-icon"></i>Priority customer support (direct calls)</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Choose Plan</a>
+                        <a href="#" class="btn btn-white w-100">Choose Plan</a>
                       </div>
                     </div>
                   </div>
