Update pricing card

--- a/pricing.html
+++ b/pricing.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./assets/css/colors/blue.css" />
     <link rel="stylesheet" href="./assets/css/custom.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lexend:wght@100..900&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -283,17 +284,17 @@
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
                         <h1>BDT 0</h1>
                         <p>/month<br>billed monthly</p>
-                        <ul class="feature-list">
-                          <li><i class="fas fa-times feature-icon"></i>Limited daily swipes</li>
-                          <li><i class="fas fa-times feature-icon"></i>No instant access to see who swiped on you</li>
-                          <li><i class="fas fa-times feature-icon"></i>Basic filters only</li>
-                          <li><i class="fas fa-times feature-icon"></i>Limited backtracks and saved jobs</li>
-                          <li><i class="fas fa-times feature-icon"></i>Messaging not available</li>
-                          <li><i class="fas fa-times feature-icon"></i>In-app calling not included</li>
-                          <li><i class="fas fa-times feature-icon"></i>No profile verification badge</li>
-                          <li><i class="fas fa-times feature-icon"></i>Withdrawals processed within 4-5 business days</li>
-                          <li><i class="fas fa-times feature-icon"></i>Standard customer support</li>
-                        </ul>
+                        <div class="feature-list mb-5">
+                          <li><i class="fas fa-check-circle feature-icon"></i> Limited daily swipes</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Limited backtracks and saved jobs</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Messaging not available</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> In-app calling not included</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> No profile verification badge</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals processed within 4-5 business days</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Standard customer support</li>
+                        </div>
                       
                         <a href="#" class="btn btn-primary w-100">Choose Plan</a>
                       </div>
@@ -305,17 +306,17 @@
                         <h5 class="card-title text-white">Premium Plan Most Popular</h5>
                         <h1 class="text-white">BDT 499</h1>
                         <p>/month<br>billed monthly</p>
-                        <ul class="feature-list">
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited job swipes</li>
-                          <li><i class="fas fa-check feature-icon"></i>See who swiped on you instantly</li>
-                          <li><i class="fas fa-check feature-icon"></i>Advanced filters (skill, rate, location)</li>
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited backtrack & saved jobs</li>
-                          <li><i class="fas fa-check feature-icon"></i>Direct messaging</li>
-                          <li><i class="fas fa-check feature-icon"></i>120 minutes of in-app calling</li>
-                          <li><i class="fas fa-check feature-icon"></i>Profile verification badge</li>
-                          <li><i class="fas fa-check feature-icon"></i>Instant withdrawals</li>
-                          <li><i class="fas fa-check feature-icon"></i>Priority customer support (direct calls)</li>
-                        </ul>
+                        <div class="feature-list mb-5">
+                          <li><i class="fas fa-check-circle feature-icon"></i> Unlimited job swipes</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> See who swiped on you instantly</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (skill, rate, location)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Unlimited backtrack & saved jobs</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> 120 minutes of in-app calling</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Profile verification badge</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Instant withdrawals</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support (direct calls)</li>
+                        </div>
                         <a href="#" class="btn btn-white w-100">Choose Plan</a>
                       </div>
                     </div>
@@ -331,17 +332,17 @@
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
                         <h1>BDT 0</h1>
                         <p>/month<br>billed monthly</p>
-                        <ul class="feature-list">
-                          <li><i class="fas fa-times feature-icon"></i>Limited daily swipes</li>
-                          <li><i class="fas fa-times feature-icon"></i>No instant access to see who swiped on you</li>
-                          <li><i class="fas fa-times feature-icon"></i>Basic filters only</li>
-                          <li><i class="fas fa-times feature-icon"></i>Limited backtracks and saved jobs</li>
-                          <li><i class="fas fa-times feature-icon"></i>Messaging not available</li>
-                          <li><i class="fas fa-times feature-icon"></i>In-app calling not included</li>
-                          <li><i class="fas fa-times feature-icon"></i>No profile verification badge</li>
-                          <li><i class="fas fa-times feature-icon"></i>Withdrawals processed within 4-5 business days</li>
-                          <li><i class="fas fa-times feature-icon"></i>Standard customer support</li>
-                        </ul>
+                        <div class="feature-list mb-5">
+                          <li><i class="fas fa-check-circle feature-icon"></i> Limited daily swipes</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Limited backtracks and saved jobs</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Messaging not available</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> In-app calling not included</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> No profile verification badge</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals processed within 4-5 business days</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Standard customer support</li>
+                        </div>
                       
                         <a href="#" class="btn btn-primary w-100">Choose Plan</a>
                       </div>
@@ -353,17 +354,17 @@
                         <h5 class="card-title text-white">Premium Plan Most Popular</h5>
                         <h1 class="text-white">BDT 499</h1>
                         <p>/month<br>billed monthly</p>
-                        <ul class="feature-list">
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited freelancer swipes</li>
-                          <li><i class="fas fa-check feature-icon"></i>See which freelancer swiped on your job immediately</li>
-                          <li><i class="fas fa-check feature-icon"></i>Advanced filters (expertise, budget, location)</li>
-                          <li><i class="fas fa-check feature-icon"></i>Unlimited backtrack & saved profiles</li>
-                          <li><i class="fas fa-check feature-icon"></i>Direct messaging</li>
-                          <li><i class="fas fa-check feature-icon"></i>120 minutes of in-app calling</li>
-                          <li><i class="fas fa-check feature-icon"></i>Verification badge for credibility</li>
-                          <li><i class="fas fa-check feature-icon"></i>Instant withdrawals</li>
-                          <li><i class="fas fa-check feature-icon"></i>Priority customer support (direct calls)</li>
-                        </ul>
+                        <div class="feature-list mb-5">
+                          <li><i class="fas fa-check-circle feature-icon"></i> Unlimited freelancer swipes</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> See which freelancer swiped on your job immediately</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (expertise, budget, location)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Unlimited backtrack & saved profiles</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> 120 minutes of in-app calling</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Verification badge for credibility</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Instant withdrawals</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support (direct calls)</li>
+                        </div>
                         <a href="#" class="btn btn-white w-100">Choose Plan</a>
                       </div>
                     </div>
