Fix the pricing navbar focus issue

--- a/pricing.html
+++ b/pricing.html
@@ -45,7 +45,7 @@
               </div>
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2 d-lg-block active" href="./">
+                  <a class="nav-link d-flex align-items-center gap-2 d-lg-block" href="./">
                     <svg class="d-block d-lg-none w-3 type-1" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M0.666016 10.6667V4.66671C0.666016 4.4556 0.713349 4.2556 0.808015 4.06671C0.902682 3.87782 1.03313 3.72226 1.19935 3.60004L5.19935 0.600041C5.43268 0.422263 5.69935 0.333374 5.99935 0.333374C6.29935 0.333374 6.56602 0.422263 6.79935 0.600041L10.7993 3.60004C10.966 3.72226 11.0967 3.87782 11.1913 4.06671C11.286 4.2556 11.3331 4.4556 11.3327 4.66671V10.6667C11.3327 11.0334 11.202 11.3474 10.9407 11.6087C10.6793 11.87 10.3656 12.0005 9.99935 12H7.99935C7.81046 12 7.65224 11.936 7.52468 11.808C7.39713 11.68 7.33313 11.5218 7.33268 11.3334V8.00004C7.33268 7.81115 7.26868 7.65293 7.14068 7.52537C7.01268 7.39782 6.85446 7.33382 6.66602 7.33337H5.33268C5.14379 7.33337 4.98557 7.39737 4.85802 7.52537C4.73046 7.65337 4.66646 7.8116 4.66602 8.00004V11.3334C4.66602 11.5223 4.60202 11.6807 4.47402 11.8087C4.34602 11.9367 4.18779 12.0005 3.99935 12H1.99935C1.63268 12 1.3189 11.8696 1.05802 11.6087C0.797127 11.3478 0.66646 11.0338 0.666016 10.6667Z"
@@ -90,7 +90,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2 d-lg-block" href="pricing.html">
+                  <a class="nav-link d-flex align-items-center gap-2 d-lg-block active" href="pricing.html">
                     <svg class="d-block d-lg-none w-3 type-1" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         fill-rule="evenodd"
