Fix the pricing amount in the table

--- a/pricing.html
+++ b/pricing.html
@@ -282,9 +282,9 @@
                     <div class="card pricing-card-bg rounded-4">
                       <div class="card-body">
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
-                        <h1>BDT 0</h1>
-                        <p>/month<br>billed monthly</p>
-                        <div class="feature-list mb-5">
+                        <span class="h1">BDT 0</span>
+                        <span>/month</span>
+                        <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Limited daily swipes</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
@@ -304,9 +304,9 @@
                     <div class="card bg-primary bg-opacity-50 rounded-4">
                       <div class="card-body text-white">
                         <h5 class="card-title text-white">Premium Plan Most Popular</h5>
-                        <h1 class="text-white">BDT 499</h1>
-                        <p>/month<br>billed monthly</p>
-                        <div class="feature-list mb-5">
+                        <span class="h1 text-white">BDT 499</span>
+                        <span>/month</span>
+                        <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited job swipes</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> See who swiped on you instantly</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (skill, rate, location)</li>
@@ -330,9 +330,9 @@
                     <div class="card pricing-card-bg rounded-4">
                       <div class="card-body">
                         <h5 class="card-title">Basic Plan (Free Forever)</h5>
-                        <h1>BDT 0</h1>
-                        <p>/month<br>billed monthly</p>
-                        <div class="feature-list mb-5">
+                        <span class="h1">BDT 0</span>
+                        <span>/month</span>
+                        <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Limited daily swipes</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
@@ -352,9 +352,9 @@
                     <div class="card rounded-4 bg-primary text-white">
                       <div class="card-body">
                         <h5 class="card-title text-white">Premium Plan Most Popular</h5>
-                        <h1 class="text-white">BDT 499</h1>
-                        <p>/month<br>billed monthly</p>
-                        <div class="feature-list mb-5">
+                        <span class="h1 text-white">BDT 499</span>
+                        <span>/month</span>
+                        <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited freelancer swipes</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> See which freelancer swiped on your job immediately</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (expertise, budget, location)</li>
