Fix pricing contents

--- a/pricing.html
+++ b/pricing.html
@@ -286,17 +286,15 @@
                         <span>/month</span>
                         <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Limited daily swipes</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Limited backtracks and saved jobs</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Messaging not available</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging not available</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> In-app calling not included</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> No profile verification badge</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals processed within 4-5 business days</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals time 5-7 business days</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Standard customer support</li>
                         </div>
-                      
-                        <a href="#" class="btn btn-primary w-100">Choose Plan</a>
+                        <!-- <a href="#" class="btn btn-primary w-100">Choose Plan</a> -->
                       </div>
                     </div>
                   </div>
@@ -308,16 +306,15 @@
                         <span>/month</span>
                         <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited job swipes</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> See who swiped on you instantly</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (skill, rate, location)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited backtrack & saved jobs</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> 120 minutes of in-app calling</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Profile verification badge</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Instant withdrawals</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support (direct calls)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals time 24-36 hours</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support</li>
                         </div>
-                        <a href="#" class="btn btn-white w-100">Choose Plan</a>
+                        <!-- <a href="#" class="btn btn-white w-100">Choose Plan</a> -->
                       </div>
                     </div>
                   </div>
@@ -337,14 +334,13 @@
                           <li><i class="fas fa-check-circle feature-icon"></i> No instant access to see who swiped on you</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Basic filters only</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Limited backtracks and saved jobs</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Messaging not available</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging not available</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> In-app calling not included</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> No profile verification badge</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals processed within 4-5 business days</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals time 5-7 business days</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Standard customer support</li>
                         </div>
-                      
-                        <a href="#" class="btn btn-primary w-100">Choose Plan</a>
+                        <!-- <a href="#" class="btn btn-primary w-100">Choose Plan</a> -->
                       </div>
                     </div>
                   </div>
@@ -356,16 +352,16 @@
                         <span>/month</span>
                         <div class="feature-list mt-5 mb-5">
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited freelancer swipes</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> See which freelancer swiped on your job immediately</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters (expertise, budget, location)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> See which freelancer swiped on your job instantly</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Advanced filters</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Unlimited backtrack & saved profiles</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Direct messaging</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> 120 minutes of in-app calling</li>
                           <li><i class="fas fa-check-circle feature-icon"></i> Verification badge for credibility</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Instant withdrawals</li>
-                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support (direct calls)</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Withdrawals time 24-36 hours</li>
+                          <li><i class="fas fa-check-circle feature-icon"></i> Priority customer support</li>
                         </div>
-                        <a href="#" class="btn btn-white w-100">Choose Plan</a>
+                        <!-- <a href="#" class="btn btn-white w-100">Choose Plan</a> -->
                       </div>
                     </div>
                   </div>
