--- a/tutorials.html
+++ b/tutorials.html
@@ -1134,9 +1134,11 @@
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-12">
-              <p class="fs-22 fw-bold mb-2 mt-4 text-center">Secured with SSL</p>
-              <img class="img-fluid" src="./assets/img/payment-method.png" alt="" />
+            <div class="col-12 text-center">
+              <span class="h3">Secured with <img class="img-fluid" width="150px" src="./assets/img/sslogo.png" alt="" /></span>
+            </div>
+            <div class="col-12 text-center">
+              <img class="img-fluid mt-3" width="500Ppx" src="./assets/img/payment-method-hd.png" alt="" />
             </div>
           </div>
           <!--/.row -->
